# fltk-TclTk-PyTkinter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: docs.yml
docs/: ARCHITECTURE.md  C_API_PATTERNS.md  EVENT_LOOP_GUIDE.md  conf.py  index.rst
src/: console_window.cpp  console_window.h  graph_params.cpp  graph_params.h  graph_window.cpp  graph_window.h  main.cpp  plugin_process.cpp  plugin_process.h  python_console.cpp  python_console.h  tcl_console.cpp  tcl_console.h
tests/: test_interpreters.cpp
